<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="name">ENTER YOUR NAME:</string>
    <string name="next">NEXT</string>
    <string name="c">C</string>
    <string name="java">JAVA</string>
    <string name="php">PHP</string>
    <string name="cques1">1.For which of the following, “PI++;” code will fail?</string>
    <string name="op1">#define PI 3.14</string>
    <string name="op2"> char *PI = “A”;</string>
    <string name="op3">float PI = 3.14;</string>
    <string name="op4">None of the Mentioned</string>
    <string name="cques2">2.What is the size of *ptr in a 32-bit machine, (assuming initialization as int *ptr = 10;)?</string>
    <string name="c2op1">1</string>
    <string name="c2op2">2</string>
    <string name="c2op3">4</string>
    <string name="c2op4">8</string>
    <string name="cques3">3.Within main, return expr statement is equivalent to?</string>
    <string name="c3op1">abort(expr)</string>
    <string name="c3op2">exit(expr)</string>
    <string name="c3op3">ferror(expr)</string>
    <string name="c3op4">None of the mentioned</string>
    <string name="cques4">4.The number of digits present after decimal in float is________.</string>
    <string name="c4op1">1</string>
    <string name="c4op2">3</string>
    <string name="c4op3">6</string>
    <string name="c4op4">16</string>
    <string name="cques5">5.Are logical operators sequence points?</string>
    <string name="c5op1">True</string>
    <string name="c5op2">False</string>
    <string name="c5op3">Depends on the compiler</string>
    <string name="c5op4">Depends on the standard</string>
    <string name="cques6">6. Relational operators cannot be used on?</string>
    <string name="c6op1"> structure</string>
    <string name="c6op2">long</string>
    <string name="c6op3">strings</string>
    <string name="c6op4">float</string>
    <string name="cques7">7.Which is the best way to generate numbers between 0 to 99??</string>
    <string name="c7op1"> rand()-100</string>
    <string name="c7op2"> rand()%100</string>
    <string name="c7op3"> rand(100)</string>
    <string name="c7op4">srand(100)</string>
    <string name="cques8">8.sin(x) returns?</string>
    <string name="c8op1">sine of x where x is in radians</string>
    <string name="c8op2">sine of x where x is in degree</string>
    <string name="c8op3"> cosine of x where x is in radians</string>
    <string name="c8op4"> cosine of x where x is in degree</string>
    <string name="cques9">9. log(x) function defined in math.h header file is?</string>
    <string name="c9op1">Natural base logarithm</string>
    <string name="c9op2">Logarithm to the base 2</string>
    <string name="c9op3">Logarithm to the base 10</string>
    <string name="c9op4"> None of the mentioned</string>
    <string name="cques10">10.Which of the following is not a valid variable name declaration?</string>
    <string name="c10op1">int _a3;</string>
    <string name="c10op2">int _3a;</string>
    <string name="c10op3">int _A3;</string>
    <string name="c10op4"> None of the mentioned</string>
    <string name="jques1">1.What is the range of short data type in Java?</string>
    <string name="j1op1">-128 to 127</string>
    <string name="j1op2">-32768 to 32767.</string>
    <string name="j1op3">-2147483648 to 2147483647.</string>
    <string name="j1op4">None of the mentioned</string>
    <string name="jques2">2.Modulus operator, %, can be applied to which of these?</string>
    <string name="j2op1">Integers</string>
    <string name="j2op2">Floating – point numbers</string>
    <string name="j2op3">Both Integers and floating – point numbers</string>
    <string name="j2op4">None of the mentioned</string>
    <string name="jques3">3.Which of these is returned by “greater than”, “less than” and “equal to” operators?</string>
    <string name="j3op1">Integers</string>
    <string name="j3op2">Floating – point numbers.</string>
    <string name="j3op3"> Boolean</string>
    <string name="j3op4">None of the mentioned</string>
    <string name="jques4">4.Which of these keywords is used to make a class??</string>
    <string name="j4op1">class</string>
    <string name="j4op2">struct</string>
    <string name="j4op3"> int</string>
    <string name="j4op4">None of the mentioned</string>
    <string name="jques5">5.What is the process of defining more than one method in a class differentiated by method signature?
?</string>
    <string name="j5op1">Function overriding</string>
    <string name="j5op2">Function overloading</string>
    <string name="j5op3">Function doubling</string>
    <string name="j5op4">None of the mentioned</string>
    <string name="jques6">6. Which of these can be overloaded??</string>
    <string name="j6op1">Methods</string>
    <string name="j6op2">Constructors</string>
    <string name="j6op3"> All of the mentioned</string>
    <string name="j6op4">None of the mentioned</string>
    <string name="jques7">7.Which of these keyword must be used to inherit a class??</string>
    <string name="j7op1">super</string>
    <string name="j7op2">this</string>
    <string name="j7op3">extent</string>
    <string name="j7op4">extends</string>
    <string name="jques8">8. Which of these method of Object class can clone an object??</string>
    <string name="j8op1">Objectcopy()</string>
    <string name="j8op2">copy()</string>
    <string name="j8op3"> Object clone()</string>
    <string name="j8op4">clone()</string>
    <string name="jques9">9. Which of these access specifiers can be used for an interface??</string>
    <string name="j9op1">Public</string>
    <string name="j9op2">Protected</string>
    <string name="j9op3">Private</string>
    <string name="j9op4"> All of the mentioned</string>
    <string name="jques10">10.Which of these package is used for analyzing code during run-time??</string>
    <string name="j10op1">java.applet</string>
    <string name="j10op2">java.awt</string>
    <string name="j10op3">java.io</string>
    <string name="j10op4">java.lang.reflect</string>
    <string name="pques1">1.What does PHP stand for?</string>
    <string name="p1op1">Personal Home Page</string>
    <string name="p1op2">Hypertext Preprocessor</string>
    <string name="p1op3">Pretext Hypertext Processor</string>
    <string name="p1op4">Preprocessor Home Page</string>
    <string name="pques2">2.Which version of PHP introduced Try/catch Exception?</string>
    <string name="p2op1">PHP 4</string>
    <string name="p2op2">PHP 5</string>
    <string name="p2op3">PHP 5.3</string>
    <string name="p2op4">PHP 6</string>
    <string name="pques3">2.Which version of PHP introduced Try/catch Exception?</string>
    <string name="p3op1">echo (“Hello World”);</string>
    <string name="p3op2">print (“Hello World”);</string>
    <string name="p3op3"> printf (“Hello World”);</string>
    <string name="p3op4">All of the above mentioned.</string>
    <string name="pques4">3.A function in PHP which starts with __ (double underscore) is know as..</string>
    <string name="p4op1">Magic Function</string>
    <string name="p4op2">Inbuilt Function</string>
    <string name="p4op3">Default Function</string>
    <string name="p4op4">User Defined Function</string>
    <string name="pques5">4.Which one of the following PHP functions can be used to find files?</string>
    <string name="p5op1">glob()</string>
    <string name="p5op2">file()</string>
    <string name="p5op3">fold()</string>
    <string name="p5op4">get_file()</string>
    <string name="pques6">5.Which of the following PHP functions can be used to get the current memory usage?</string>
    <string name="p6op1">get_usage()</string>
    <string name="p6op2">get_peak_usage()</string>
    <string name="p6op3">get_memory_usage()</string>
    <string name="p6op4">get_memory_peak_usage())</string>
    <string name="pques7">6.Which of the following statements causes PHP to disregard repeated error messages that occur within the same file and on the same line?</string>
    <string name="p7op1"> ignore_repeated_errors</string>
    <string name="p7op2"> ignore_repeat_error</string>
    <string name="p7op3">repeatedly_ignore_error</string>
    <string name="p7op4">repeated_error_ignore</string>
    <string name="pques8">7.Which function is used to erase all session variables stored in the current session?</string>
    <string name="p8op1">session_destroy()</string>
    <string name="p8op2">session_change()</string>
    <string name="p8op3">session_remove()</string>
    <string name="p8op4">session_unset()</string>
    <string name="pques9">8.An attacker somehow obtains an unsuspecting user’s SID and then using it to impersonate the user inorder to gain potentially sensitive information. This attack is known as..</string>
    <string name="p9op1">session-fixation</string>
    <string name="p9op2">session-fixing</string>
    <string name="p9op3"> session-hijack</string>
    <string name="p9op4">session-copy</string>
    <string name="pques10">9.Code that uses a class, function, or method is often described as the..</string>
    <string name="p10op1"> client code</string>
    <string name="p10op2"> user code</string>
    <string name="p10op3">object code</string>
    <string name="p10op4"> class code</string>
    <string name="congratulations"> CONGRATULATIONS</string>
    <string name="score"> Your Score is:</string>


</resources>
