<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA8072"
    >
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cques1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <RadioGroup
        android:id="@+id/crg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/text1"

        >
        <RadioButton
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"

            />
        <RadioButton
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"

            />
        <RadioButton
            android:id="@+id/cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"

            />
        <RadioButton
            android:id="@+id/cb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op4"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"

            />

    </RadioGroup>

    <Button
        android:id="@+id/but"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/crg1"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>




</RelativeLayout>