<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA8072"
    tools:context="com.example.chandrassekhar.langquiz.MainActivity">



    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textSize="40sp"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_below="@+id/text"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="20sp"


        />
</RelativeLayout>
